--- a/css.css
+++ b/css.css
@@ -11,7 +11,7 @@ body{
 
 #header{
     color: #33e;
-    padding: 10%;
+    padding: 5%;
     text-align: center;
     font-size: 80px;
 }
@@ -26,6 +26,7 @@ body{
     border: 0;
     padding: 0;
     font-size: 100px;
+    margin-top: 100px;
     margin-bottom: 100px;
     text-align: center;
     color: #060;
