--- a/css.css
+++ b/css.css
@@ -22,12 +22,12 @@ body{
 
 .textbox{
     width: 90%;
-    height: 120px;
+    height: 90px;
     border: 0;
     padding: 0;
-    font-size: 100px;
-    margin-top: 100px;
-    margin-bottom: 100px;
+    font-size: 80px;
+    margin-top: 10%;
+    margin-bottom: 10%;
     text-align: center;
     color: #060;
     background-color: #0000;
@@ -38,7 +38,7 @@ body{
 }
 
 #button{
-    padding: 15px;
+    padding: 2%;
     font-size: 30px;
     display: none;
     background-color: #0000;
@@ -60,4 +60,15 @@ body{
     color: #fff;
     background-color: #050;
     border-color: #0000;
+}
+
+
+@media screen and (max-width: 600px) {
+    #header, .textbox{
+      font-size: 30px;
+    }
+
+    #button{
+        font-size: 20px;
+    }
 }
